0.23.0dev - in development
--------------------------

 * qannotate:
   * New command-line option `--line=N` (`-L`) to activate specified 
     line number on start of dialog. (Alexander Belchenko)


0.22.2 - in development
-----------------------

 * qshelve:
   * Pressing Ctrl+Enter in message edit area triggers shelve action.
     (IWATA Hidetaka, Bug #936982)


0.22.1 - 2012/02/21
-------------------
Just in time for bzr 2.5.

 * New command: qignore. (Alexander Belchenko, Bug #524785)


0.22.0 "Alder" - 2012/02/07
---------------------------
What's new in this release:

QBzr 0.22 is companion release for bzr 2.5, and compatible with bzr 2.4.
This release has many improvements and bugfixes. As usual many improvements 
related to qdiff dialog.

While searching for the word or sentence all matches are highlighted.
This highlighting works in qdiff, qshelve, qunshelve, qannotate.
To make navigation faster through the long side-by-side diff, or inside big 
annotated file you can use backside guide bar in qdiff and qannotate.

Behavior change: "Unchanged" option in treewidget filter now only applies 
to versioned files. (Before it was applied to unknown files too).

Other qdiff improvements include: curved lines are using in side-by-side view, 
smart synchronization of side-by-side view in "Complete" mode;
files with wrong or mixed encoding no more shown as "latin-1", but in user-
specified encoding.

For full list of improvements and bugfixes please see changelog below.

 * qannotate:
   * Vertically center the target line when using "Goto Line" in qannotate.
     (Benoît Pierre)
   * Show change markers side of annotate view.
     It represents where lines changed by selected revisions are.
     (IWATA Hidetaka)
 * qbrowse:
   * Does not crash anymore when called for shared repository.
     (André Bachmann, Alexander Belchenko, Bug #578935)
   * Avoid using inventory for access to revision and working trees.
     (Jelmer Vernooij, Bug #922121)
 * qconfig: